# headsetstatus

./: .SRCINFO  .cursorrules  .gitignore  CHANGELOG.md  CMakeLists.txt  HeadsetStatus.desktop  LICENSE  PERF_BASELINE.md  PKGBUILD  README.md  RELEASE.md  headsetstatus-1.0.1-1-x86_64.pkg.tar.zst  headsetstatus-debug-1.0.1-1-x86_64.pkg.tar.zst  headsetstatus.service  main.cpp
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: release-flow.md
pkg/headsetstatus/: .BUILDINFO  .MTREE  .PKGINFO
pkg/headsetstatus-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: ConfigManager.cpp  ConfigManager.h  HeadsetDevice.h  HeadsetManager.cpp  HeadsetManager.h  NotificationManager.cpp  NotificationManager.h  SettingsDialog.cpp  SettingsDialog.h  TrayIconController.cpp  TrayIconController.h  version.h.in
src/headsetstatus-1.0.0/: README.md
src/headsetstatus-1.0.1/: .SRCINFO  CMakeLists.txt  PKGBUILD
tests/: test_ConfigManager.cpp  test_HeadsetManager.cpp
